- add template ngIf

--- a/1000TANG_angular/src/app/components/about/about.component.html
+++ b/1000TANG_angular/src/app/components/about/about.component.html
@@ -1,1 +1,19 @@
-<h1>Intro</h1>
+<section>
+	<header class="main">
+		<h1>{{_category}}</h1>
+	</header>
+	<section *ngIf="_about_us">
+	</section>
+	
+	<section *ngIf="_origin">
+	</section>
+	
+	<section *ngIf="_space">
+	</section>
+	
+	<section *ngIf="_latest_news">
+	</section>
+	
+	<section *ngIf="_contact_us">
+	</section>
+</section>
