--- a/1000TANG_angular/src/app/components/project/project.component.html
+++ b/1000TANG_angular/src/app/components/project/project.component.html
@@ -1,1 +1,16 @@
-<h1>Project</h1>
+<section>
+	<header class="main">
+		<h1>{{_category}}</h1>
+	</header>
+	<section *ngIf="_origin">
+	</section>
+	
+	<section *ngIf="_purpose">
+	</section>
+	
+	<section *ngIf="_content">
+	</section>
+	
+	<section *ngIf="_academic_resources">
+	</section>
+</section>
