--- a/1000TANG_angular/src/app/components/usr/usr.component.html
+++ b/1000TANG_angular/src/app/components/usr/usr.component.html
@@ -2,13 +2,8 @@
 	<header class="main">
 		<h1>{{_category}}</h1>
 	</header>
-	<section  style="font-family:Microsoft JhengHei;">
-        <header class="main">
-            <a name="renshijiayuan"><h1>認識家園</h1></a>
-        </header>
-
-        <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-        
+	<section *ngIf="_get_to_know">
+        <!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
         <h2>介紹教育部USR計畫</h2>
         <p>教育部推動大專校院社會責任實踐計畫補助要點</p>
         <p>一、目的：教育部（以下簡稱本部）為推動大專校院社會責任實踐計畫(以下簡稱本計畫)，期強化大專校院與區域城鄉發展(社區、產業、文化、智慧城市)之在地連結合作，實踐其社會責任，並透過人文關懷及協助解決區域問題之概念，鼓勵教師帶領學生以跨系科、跨團隊或跨校聯盟之結合，或以結合地方政府及產業資源，共同促進在地產業聚落、社區文化創新發展，並增進學生對在地認同，進而激發在地就業或創業，特訂定本要點。</p>
@@ -80,7 +75,6 @@
         <p>(三)由本部組成審查考核小組，以書面審查、受補助學校簡報、辦理成果發表會或輔導訪視等方式，於核定補助計畫執行期程結束前三個月(依本部通知之期限)辦理期末考核；考核結果將作為延續計畫申請是否續予補助、補助經費額度及區域陪伴中心培力輔導功能發揮之評核依據。</p>
         <p>(四)學校執行計畫成效不彰者，本部得扣減或停止全部補助。</p>
         
-
         <hr class="major" />
 
         <h2>本院USR計畫</h2>
@@ -97,23 +91,14 @@
         <p>五、結語：透過「長照關懷」與「文化體驗」強化社區能力與社區意識，作為本計畫主要的焦點議題</p>
         <p>經上述盤點桃園的重大焦點議題後，可以發現透過「長照關懷服務」（如社會參與、樂齡學習、陪伴閱讀、關懷行動等）與「在地文化體驗」（在地文化資源體驗、創意設計、活動舉辦、社區參與等），前者促進社區健康，後者促進社區文化，共同提昇社區能力與凝聚社區意識，作為本計畫實踐大學社會責任的兩大主軸。</p>
         <p>桃園市為我國的第六個直轄市，資源相對豐沛；近年來，在中央政府鼎力支持下，分別推出足以影響桃園發展的重大公共計畫—國際航空城計畫與亞洲矽谷計畫，可以預見桃園未來必然面臨社會經濟與產業佈局上的轉型與變化。本校一直思考在此轉型過程中可能扮演的重要角色，故校長與桃園市長的合作交流相當密切。若本計畫付諸實施後，將密切與地方政府各局處合作，爭取其經費補助與行政協助，如青年事務局、文化局、社會局、都市發展局等。</p>
-        
-        
-        
     </section>
     
     <!-- 幸福家園 -->
-    <section  style="font-family:Microsoft JhengHei;">
-        <header class="main">
-            <a name="xingfujiayuan"><h1>幸福家園</h1></a>
-        </header>
-
-        <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-        
+    <section *ngIf="_happiness">
+        <!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
         <h2>運作空間</h2>
         <p>空空</p>
-        
-        
+		
         <hr class="major" />
 
         <h2>USR宗旨--推動目標</h2>
@@ -133,10 +118,9 @@
         <p>本計畫堅持善盡大學社會責任的理念，一方面尋找中央或地方政府的「長照政策」、「文化政策」，是否有政策資源可以善加利用，以補經費之不足？以前者而言，根據2015年6月3日通過《長期照顧服務法》11條：社區式長照服務包括11項，但本院僅能著眼於大學生可以做得到的照顧服務，如關懷據點送暖、樂齡教育學習、社區社會企業、社區課後陪伴、婦女社會實踐、新住民搏感情等「社區服務」。以後者而言，根據文化部或桃園市政府文化局之相關政策內涵，著重於玩埤巡圳、社區彩繪、古厝結盟、廟宇連線、節慶文化、地景藝術、經典教育、跨國文化等「文化體驗」活動。</p>
         <p>落實大學社會責任之推動組織是成立「千塘社區研究院」，統籌實踐大學社會責任所有事宜，服務對象包括青年、婦女、高齡者；政策資源包括財力、物力、人力、智力；至於前進地方的策略管理模式則是貫徹「資源整合」、「人才培育」、「跨域合作」的三大關鍵策略，期盼參與學生分組進入社區參與活動或進行文化體驗，從活動中找到社區問題癥結點，並且提出政策方案提案，以供村里辦公室、社區發展協會或地方政府之決策參考。</p>
         <p>圖4 「社區設計」的推動路徑圖</p>
-        
-        
+		
         <hr class="major" />
-
+		
         <h2>家園組織－人社院院長、四系主任、藝術中心
         </h2>
         <p>二、本計畫之推動組織：千塘社區研究院</p>
@@ -155,7 +139,14 @@
         <p>參與學生類型如表2所述，主要係由文化產業與文化政策博士學位學程博士生、第一期社區企劃師學員為「組長」，帶領社政系學士班或其他各系（中語系、藝設系、應外系或其他各系），加入「共築千塘社區好家園」計畫。試辦計畫期間係以上述學生類型為主，但進入第二期（執行期）則徵求校外同學或鄰近高中生加入「共築千塘社區好家園」計畫，以擴大「千塘服務團隊」之社會影響力。</p>
         <p>表1  參與本計畫之教師</p>
         <p>表2  試辦期預計參與計畫之執行學生類型</p>
-        
-        
     </section>
+	
+	<section *ngIf="_organization">
+	</section>
+	
+	<section *ngIf="_care">
+	</section>
+	
+	<section *ngIf="_experience">
+	</section>
 </section>
