--- a/1000TANG_angular/src/app/widgets/sidebar-left/sidebar-left.widget.html
+++ b/1000TANG_angular/src/app/widgets/sidebar-left/sidebar-left.widget.html
@@ -12,21 +12,21 @@
 			<span class="opener">簡介</span>
 			<ul>
 				<li><a routerLink="/about/about-us">關於我們</a></li>
-				<li><a routerLink="/about/link">創立緣起</a></li>
-				<li><a routerLink="/about/link">師資陣容</a></li>
-				<li><a routerLink="/about/link">文創千塘空間</a></li>
-				<li><a routerLink="/about/latest_news">最新消息（連結FB）</a></li>
+				<li><a routerLink="/about/origin">創立緣起</a></li>
+				<li><a routerLink="/about/staff">師資陣容</a></li>
+				<li><a routerLink="/about/space">文創千塘空間</a></li>
+				<li><a routerLink="/about/latest-news">最新消息（連結FB）</a></li>
 				<li><a routerLink="/about/contact-us">聯絡資訊</a></li>
 			</ul>
 		</li>
 		<li>
 			<span class="opener">共創千塘好家園（USR）</span>
 			<ul>
-				<li><a routerLink="/usr/link">認識家園</a></li>
-				<li><a routerLink="/usr/link">幸福家園</a></li>
-				<li><a routerLink="/usr/link">家園組織</a></li>
-				<li><a routerLink="/usr/link">長照關懷家園</a></li>
-				<li><a routerLink="/usr/link">人文體驗家園</a></li>
+				<li><a routerLink="/usr/get-to-know">認識家園</a></li>
+				<li><a routerLink="/usr/happiness">幸福家園</a></li>
+				<li><a routerLink="/usr/organization">家園組織</a></li>
+				<li><a routerLink="/usr/care">長照關懷家園</a></li>
+				<li><a routerLink="/usr/experience">人文體驗家園</a></li>
 			</ul>
 		</li>
 		<li>
@@ -43,8 +43,8 @@
 			<span class="opener">地景文化與永續觀光政策</span>
 			<ul>
 				<li><a routerLink="/project/origin">計畫緣起</a></li>
-				<li><a routerLink="/project/link">計畫宗旨</a></li>
-				<li><a routerLink="/project/link">計畫內容</a></li>
+				<li><a routerLink="/project/purpose">計畫宗旨</a></li>
+				<li><a routerLink="/project/content">計畫內容</a></li>
 				<li><a routerLink="/project/academic-resources">學術資源</a></li>
 			</ul>
 		</li>
