update html, categories

--- a/1000TANG_angular/src/app/components/about/about.component.html
+++ b/1000TANG_angular/src/app/components/about/about.component.html
@@ -1,19 +1,43 @@
 <section>
-	<header class="main">
-		<h1>{{_category}}</h1>
-	</header>
 	<section *ngIf="_about_us">
+		<p>- 網站架構內容</p>
 	</section>
 	
 	<section *ngIf="_origin">
+		<h2>人社院三項計畫</h2>
+		<p>Text here</p>
+		
+		<hr class="major" />
+		
+		<h2>教育部高教深耕</h2>
+		<p>Text here</p>
+	</section>
+	
+	<section *ngIf="_staff">
+		<p>- 人社院院長、四系主任、藝術中心</p>
 	</section>
 	
 	<section *ngIf="_space">
+		<p>- 專案辦公室</p>
 	</section>
 	
 	<section *ngIf="_latest_news">
+		<h2>課程公告</h2>
+		<p>Text here</p>
+		
+		<hr class="major" />
+		
+		<h2>活動公告</h2>
+		<p>Text here</p>
+		
+		<hr class="major" />
+		
+		<h2>其他相關活動</h2>
+		<p>Text here</p>
 	</section>
 	
 	<section *ngIf="_contact_us">
+		<p>- 院辦公室</p>
+		<p>- 專任助理辦公室</p>
 	</section>
 </section>
