--- a/1000TANG_angular/src/app/components/project/project.component.html
+++ b/1000TANG_angular/src/app/components/project/project.component.html
@@ -1,16 +1,26 @@
 <section>
-	<header class="main">
-		<h1>{{_category}}</h1>
-	</header>
 	<section *ngIf="_origin">
+		<h2>背景</h2>
+		<p>Text here</p>
 	</section>
 	
 	<section *ngIf="_purpose">
+		<h2>目的</h2>
+		<p>Text here</p>
 	</section>
 	
 	<section *ngIf="_content">
+		<h2>Title here</h2>
+		<p>Text here</p>
 	</section>
 	
 	<section *ngIf="_academic_resources">
+		<h2>關於地景文獻</h2>
+		<p>Text here</p>
+		
+		<hr class="major" />
+		
+		<h2>關於觀光政策文獻</h2>
+		<p>Text here</p>
 	</section>
 </section>
