--- a/1000TANG_angular/src/app/components/app/app.component.html
+++ b/1000TANG_angular/src/app/components/app/app.component.html
@@ -2,6 +2,7 @@
 	<div id="main">
 		<div class="inner">
 			<app-header></app-header>
+			<page-header></page-header>
 			<router-outlet></router-outlet> 
 		</div>
 	</div>
