--- a/1000TANG_angular/src/app/components/dreamworks/dreamworks.component.html
+++ b/1000TANG_angular/src/app/components/dreamworks/dreamworks.component.html
@@ -1,80 +1,35 @@
 <section>
-	<header class="main">
-		<h1>{{_category}}</h1>
-	</header>
 	<section *ngIf="_home">
-		<!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
-		<h2>介紹教育部USR計畫</h2>
-		<p>教育部推動大專校院社會責任實踐計畫補助要點</p>
-		<p>一、目的：教育部（以下簡稱本部）為推動大專校院社會責任實踐計畫(以下簡稱本計畫)，期強化大專校院與區域城鄉發展(社區、產業、文化、智慧城市)之在地連結合作，實踐其社會責任，並透過人文關懷及協助解決區域問題之概念，鼓勵教師帶領學生以跨系科、跨團隊或跨校聯盟之結合，或以結合地方政府及產業資源，共同促進在地產業聚落、社區文化創新發展，並增進學生對在地認同，進而激發在地就業或創業，特訂定本要點。</p>
-		<p>二、補助對象：公私立大專校院（以下簡稱學校）。</p>
-		<p>三、 補助計畫期間：</p>
-		<p>(一)試辦期：一百零六年八月一日至一百零七年三月三十一日。</p>
-		<p>(二)執行期：一百零七年四月一日至一百一十年三月三十一日，採分年核定補助，最長一次核定三年。</p>
-		<p>四、 推動作法：</p>
-		<p>(一)強化區域產學鏈結，協助在地產業發展及升級：由學校盤點對區域發展產生實質貢獻，並可提升在地價值之產業發展及需求議題，在既有產學合作基礎上，強化產學合作之社會價值，拓展地方產業發展格局及未來樣貌。</p>
-		<p>(二)促進區域資源整合，協助城鄉教育發展：由學校連結區域內公私部門資源形成翻轉學校教學、縮短城鄉資源差距，並促進學生場域實作學習及分享之合作模式。</p>
-		<p>(三)落實學校社會責任，引動師生參與社會創新：鼓勵學校師生以實際問題為導向，藉由發掘及解決在地問題之過程，引導學生關懷在地、自主學習，促進教師專業成長，並創造城鄉、產學及文化發展之創新價值。</p>
-		<p>(四)促進人才培育與活絡在地學習、就業及創業：建構區域發展特色與區域產業人才供需對接機制，以培育產業所需實務人才。</p>
-		<p>五、 申請方式：</p>
-		<p>(一)申請時間：依本部公告之申請期限提出申請。</p>
-		<p>(二)申請程序：學校應於公告期限內向本部提出計畫申請，逾期、資格不符或資料不全者，均不予受理。</p>
-		<p>(三)申請計畫類型：</p>
-		<p>1.種子型：</p>
-		<p>(1)得由單一學校之跨領域教師團隊推動或跨校之跨領域教師，組成計畫團隊執行。</p>
-		<p>(2)計畫團隊未曾執行其他部會有關服務區域產業聚落、工業園區輔導轉型、人文社會實踐及在地創新等類型計畫，經過與所在地區或鄰近區域利害關係人共同研議、凝聚共識，盤點在地發展、產業、文化與城鄉需求議題及所面臨問題後，研提可具體改善或解決問題之構想試行計畫。</p>
-		<p>2.萌芽型：</p>
-		<p>(1)應由跨校之跨領域教師組成計畫團隊執行。</p>
-		<p>(2)計畫團隊曾執行種子型計畫或其他部會有關服務區域產業聚落、工業園區輔導轉型、人文社會實踐、在地創新等類型之計畫期程累積二年以上；對於推動社會實踐已有相關經驗但尚未形成運作機制，為建構在地產業、文化、城鄉等發展之系統性，並建立永續發展之基礎，可研提繼續精進之具體可實踐計畫。</p>
-		<p>3.深耕型：</p>
-		<p>(1)應由推動社會實踐已具經驗、規模及量能之跨校跨領域教師組成計畫團隊執行，並應建立跨校跨領域之合作輔導機制。</p>
-		<p>(2)計畫團隊曾執行過萌芽型計畫或其他部會有關服務區域產業聚落、工業園區輔導轉型、人文社會實踐、在地創新等類型之計畫期程累積達四年以上；對於推動社會實踐具有完整經驗、清晰之推動架構與組織及穩定之人力，可協助在地形成新型態規模經濟。</p>
-		<p>(3)除研提計畫實踐之具體面向外，學校應建立協助串聯跨校執行之機制，並規劃至少輔導五所學校執行所提計畫，將團隊成功經驗複製、擴散計畫效益及永續經營。</p>
-		<p>(四)申請原則：</p>
-		<p>1.同一學校得就種子型、萌芽型或深耕型計畫提出申請：</p>
-		<p>(1)於試辦期申請深耕型計畫件數至多一件，合計申請計畫總件數至多二件。</p>
-		<p>(2)於執行期每年申請種子型、萌芽型或深耕型計畫總件數至多四件；申請深耕型計畫件數至多一件。</p>
-		<p>2.申請計畫之學校應將社會責任實踐列入校務發展基幹項目及學校發展特色之整體規劃。</p>
-		<p>3.各類計畫之團隊應由學校擇定計畫主持人，但同一教師至多擔任本計畫二件計畫之主持人或協同主持人。</p>
-		<p>4.學校提出申請計畫之內容與執行中或曾執行之社會實踐型計畫，相同者，不予受理。</p>
-		<p>六、 補助基準：</p>
-		<p>(一)種子型計畫：試辦期每一計畫至多新臺幣(以下同)一百二十萬元；執行期每一計畫每年至多二百萬元，最長補助二年。</p>
-		<p>(二)萌芽型計畫：試辦期每一計畫至多四百萬元；執行期每一計畫每年至多六百萬元，最長補助三年。</p>
-		<p>(三)深耕型計畫：試辦期每一計畫至多六百萬元；執行期每一計畫每年至多一千萬元，最長補助三年。</p>
-		<p>七、 審查作業：</p>
-		<p>(一)由本部遴聘各領域專家學者、產業界及區域發展有關代表、政府部門代表等組成審查小組，依學校研提申請計畫內容，得促進在地發展之效益及計畫團隊之能量等進行審查。</p>
-		<p>(二)審查方式如下：</p>
-		<p>1.種子型計畫：審查小組進行書面審查，通過者，經審查小組建議補助經費額度後，由本部核定。</p>
-		<p>2.萌芽型計畫：</p>
-		<p>（1） 初審：審查小組進行書面審查，通過者進行複審。</p>
-		<p>（2） 複審：由計畫主持人向審查小組進行簡報，並回應委員詢問，通過者，經審查小組建議補助額度後，由本部核定。</p>
-		<p>3.深耕型計畫：</p>
-		<p>（1） 初審：審查小組進行書面審查，通過者進行複審。</p>
-		<p>（2） 複審：由計畫主持人向審查小組進行簡報，並回應委員詢問，通過者進行決審。</p>
-		<p>（3） 決審：由審查小組至計畫聚焦之在地場域進行實地訪查，以瞭解計畫團隊是否具備相關執行能量、與在地區域之產業、各級學校及社區等合作交流之狀況，通過者，經審查小組建議補助額度後，由本部核定。</p>
-		<p>八、 經費編列及支用原則：</p>
-		<p>(一)本計畫得編列人事費（包括計畫主持人、協同主持人、專案教學人員、專案經理、專任助理、兼任助理或教學助理費），編列額度種子型計畫以不超過補助經費之百分之七十為原則、萌芽型計畫以不超過補助經費之百分之六十為原則及深耕型計畫以不超過補助經費之百分之五十為原則。</p>
-		<p>計畫主持人或協同主持人如由學校校長或副校長擔任，則不得支領相關主持人費用。</p>
-		<p>(二)相關推動計畫所需之業務費及雜費或其他特殊理由有增加經費項目之必要者，報本部核准後得編列及支用。</p>
-		<p>(三)深耕型計畫可能渉及空間活化及再利用等規劃執行者，學校得視計畫需求編列資本門項目，報本部核准後得編列及支用。</p>
-		<p>(四)因執行本計畫所需支付短程車資費用，應依照「國內出差旅費報支要點」檢據核實報支。</p>
-		<p>(五)因應本要點推動事項聘用之專兼任人員及助理等編制外專案計畫工作人員之待遇，依下列規定辦理：</p>
-		<p>1.專任人員：專案教學人員、專案經理及專任助理等專任人員，由學校依聘任需求自訂標準核支。</p>
-		<p>2.兼任人員：應依科技部補助專題研究計畫兼任助理費用支給標準表核支。</p>
-		<p>3.本要點所聘用專任人員人事費用應包括勞、健保費、勞退基金（離職儲金）。</p>
-		<p>九、 經費核撥及核結：</p>
-		<p>(一)經費核撥：各校補助經費經核定後，應依審查意見進行計畫修正，檢具修正計畫書及經費領據向本部請領補助經費。試辦期各類計畫經費及執行期種子型計畫之經費採一次撥付；執行期萌芽型及深耕型計畫經費分二期撥付，第一期經費於計畫核定後由學校檢具修正計畫書及經費領據辦理請領百分之六十補助經費；第二期經費於第一期經費執行率達百分之七十以上時，由學校檢具經費領據請領百分之四十補助經費。</p>
-		<p>(二)經費核結：補助經費各用途別科目之編列、支給基準及結餘款應依本部補助及委辦經費核撥結報作業要點及中央政府各機關單位預算執行要點及相關規定辦理。</p>
-		<p>(三)學校辦理本計畫各類活動之推動辦理並應符合本部及所屬機關學校辦理各會議講習訓練與研討（習）會相關管理措施及改進方案相關規定辦理。</p>
-		<p>(四)對直轄市、縣（市）政府主管之學校之補助款，依中央對直轄市及縣（市）政府補助辦法規定，直轄市、縣（市）政府財力分級屬第一級者，本部最高補助比率以不超過核定計畫金額之百分之七十五為原則；屬第5二級至第五級者，本部最高補助比率不得超過核定計畫金額之百分之九十。</p>
-		<p>十、 培力輔導及成效考核機制：</p>
-		<p>(一)由本部成立計畫專案辦公室組成專家諮詢輔導團，深入了解及協助各類計畫之推動。</p>
-		<p>(二)本部得於各校計畫核定後，辦理下列培力輔導事項：</p>
-		<p>1.依實際需求擇定數個區域陪伴中心，協助辦理區域內種子型計畫之輔導、培力、研習、探索、關懷、參與、盤點區域內議題後媒合計畫，及辦理經驗移轉等行政事務，並依實際輔導計畫數量核予基礎運作及輔導經費。</p>
-		<p>2.為綜整及移轉各計畫議題成果，得由本部擇定部分區域陪伴中心成為議題陪伴中心，提供議題跨區服務，並肩負辦理議題總培力輔導、實踐經驗移轉及協調溝通之任務。</p>
-		<p>(三)由本部組成審查考核小組，以書面審查、受補助學校簡報、辦理成果發表會或輔導訪視等方式，於核定補助計畫執行期程結束前三個月(依本部通知之期限)辦理期末考核；考核結果將作為延續計畫申請是否續予補助、補助經費額度及區域陪伴中心培力輔導功能發揮之評核依據。</p>
-		<p>(四)學校執行計畫成效不彰者，本部得扣減或停止全部補助。</p>
-
+		<h2>介紹教育部創新教學試辦計畫</h2>
+		<p>埤塘是桃園最重要的文化地景之一，多數研究以自然科學家為主，從農田水利、都市計畫、自然與人文地理，生態保育等觀點進行探究，較少關懷人文脈絡的探索。本創新教學試辦計畫的名稱為「頑皮塘101數位文創智造夢工廠」，規劃透過至少101小時以創新教學為主，傳統教學為輔的方式，運用學生最熟悉的數位科技，以「千塘之鄉」的桃園地方文化資產為創作素材，採取問題導向、創意啟發與創客創新的創新教學方法，推動以學生為主體的創新教學，學生從討論中學習居民智慧、生活文化，以及感受土地、埤塘水岸景觀的真實，以培養學生積極主動的思維與態度，從而豐富其創意，提升其創新與自主實踐能力。</p>
+		
+		<hr class="major" />
+		
+		<h2>本院計畫內容與宗旨</h2>
+		<p>本創新教學試辦課程設計過程，採取PDCAB循環的實踐，包括規劃(plan)、實踐(do)、檢視(check)、回饋與改善(action)與標竿學習(benchmarking)等步驟，透過，逐步落實。</p>
+		<p>一、	起夢：起夢共識營3小時，參與創新教學之教師、輔導員與行政助理聚會討論，凝聚教學共識，討論未來進行方式或其他相關問題。</p>
+		<p>二、	尋夢：尋夢沙龍6小時，圓夢學生全體參與，主要任務是：</p>
+		<p>(一)由夢工廠主任說明夢工廠的意義、教學方式與同學參與方式，並且說明圓夢學生的任務：</p>
+		<p>一、必須完成各項活動課程之實作；</p>
+		<p>二、必須完成業師的提案項目；</p>
+		<p>三、課程結束後參與成果發表之團體競賽。</p>
+		<p>(二)參與學生分成5組，每組配置一名輔導員（由人社院文產博士生或碩士生擔任），主要任務為：為小組命名、選出小組長、擬參與成果發表之創作主題、擬運用的數位科技工具，例如桃園埤塘的生態動畫片，或拍攝埤塘社區的微電影等，無論作品形式為何，最終作品均需以數位內容形式呈現。</p>
+		<p>(三)每位同學組成LINE群組，便於聯繫與討論。</p>
+		<p>三、	解夢：主要是以傳統教學方法，傳授有關桃園埤塘的基本知識，稱為「基礎課程」共21小時，由人社院參與教師與社區實務工作者擔任師資，以觀念傳遞、互動討論與知識分享為主。課程科目初步包括：「桃園埤塘知多少？」、「埤塘─聚落發展的生命之水」、「形形色色的埤塘生物」、「埤塘發『聲』的事」、「桃園文化地圖行旅」、「社會企業家產業學堂」、「數位工具百寶箱」、「電子商務大觀園」、「社區尋寶與智造」等，提供各組「圓夢」行動的知識基礎。</p>
+		<p>四、	踏夢：實地巡禮埤塘8小時，由教師與輔導員帶領，分組進行桃園埤塘巡禮，包括：中壢士校大池、八德埤塘生態公園、楊梅秀才山5B埤塘公園、龍潭觀光大池新屋、新屋後湖塘等。由各組自行認養要「夢遊」的埤塘與社區，同時選擇從玩文學、玩美學、玩文創、玩影音或玩生態的角度進行「築夢」作品的創作計畫，並於課程結束前完成逐夢作品。</p>
+		<p>五、	築夢：創新教學課程34小時，由人社院參與教師與業師共同擔任築夢師資，以相互合作精神共同操作，採取問題導向教學法，由業師提出問題，學生提出解決構想。課程主題係以埤塘為主題，包括下列課程：</p>
+		<p>(一)「玩影音」實作課程：由各組決定要採用的影音數位科技後，自行邀請專業師資授課，例如學習手機攝影、設計LOGO等，計10小時，授課鐘點費由本教學計畫支付。</p>
+		<p>(二)「玩創意」內容發想：由人社院教師與業師共同上課，引導各組學生針對選定文創產品的創意內容提出發想，計6小時。</p>
+		<p>(三)「玩文學」廣告文案：由人社院教師與廣告實務工作者共同引導各組學生針對選定文創產品（例如推銷休閒旅遊景點、旅館、民宿等）的廣告文案進行撰寫練習，計6小時。</p>
+		<p>(四)「玩美學」藝術創客：由人社院教師與業師共同上課，引導各組針對選定文創產品的商業藝術展現提出構想，計6小時。</p>
+		<p>(五)「玩生態」社區參與：由人社院教師與業師共同上課，引導各組針對選定文創產品的連結社區進行意見蒐集與共識發展，計6小時。</p>
+		<p>六、	追夢：參訪數位文創公司6小時，例如奧亞數位文創、三貝德數位文創等，透過標竿學習。</p>
+		<p>七、	造夢：造夢行動20小時，針對提案進行數位文創的設計，以及針對成果展覽辦理競賽活動，並邀請相關企業、團體、社區人員參與評比。</p>
+		<p>八、	圓夢：教學成果檢視3小時，計畫執行期中與期末時，與參與教師、業師、學生座談，執行問卷調查，瞭解參與老師、學生、專家、助理、講師對於試辦計畫之評價，檢視此一創新教學法的相關執行問題與改進方式。</p>
+		<p>九、	夢實踐：將最終結果建置桃園埤塘生態與文化創意價值資料庫，所有造夢過程的酸甜苦辣與實際成果，均建置於此一資料庫，供後續創新教學實施的經驗傳承。</p>
+		<!--<span class="image main text-center"><img src="" /></span>-->
+		<p class="text-center"><b>圖 2「圓夢步驟」</b></p>
+		
 		<hr class="major" />
 
 		<h2>本院USR計畫</h2>
@@ -92,12 +47,16 @@
 		<p>經上述盤點桃園的重大焦點議題後，可以發現透過「長照關懷服務」（如社會參與、樂齡學習、陪伴閱讀、關懷行動等）與「在地文化體驗」（在地文化資源體驗、創意設計、活動舉辦、社區參與等），前者促進社區健康，後者促進社區文化，共同提昇社區能力與凝聚社區意識，作為本計畫實踐大學社會責任的兩大主軸。</p>
 		<p>桃園市為我國的第六個直轄市，資源相對豐沛；近年來，在中央政府鼎力支持下，分別推出足以影響桃園發展的重大公共計畫—國際航空城計畫與亞洲矽谷計畫，可以預見桃園未來必然面臨社會經濟與產業佈局上的轉型與變化。本校一直思考在此轉型過程中可能扮演的重要角色，故校長與桃園市長的合作交流相當密切。若本計畫付諸實施後，將密切與地方政府各局處合作，爭取其經費補助與行政協助，如青年事務局、文化局、社會局、都市發展局等。</p>
 
+		<hr class="major" />
+		
+		<h2>作法</h2>
+		<p>「頑皮塘101數位文創智造夢工廠」創新教學試辦計畫運用觀念新穎、共同參與、學生主體、多元適性、科技善用、永續創新等原則加以設計。透過至少101小時以創新教學為主，傳統教學為輔的方式，結合學生最熟悉的數位科技工具，透過「玩文學」、「玩美學」、「玩影音」、「玩文創」、「玩生態」等「五玩」理念，落實埤塘人文、生態為桃園重要環境教育場所與空間，並結合周遭社區，將埤塘水圳與社區有效連結，讓人與水之間更加密切；進行桃園埤塘印象，讓埤塘地景成為重要的視覺。</p>
+		<!--<span class="image main text-center"><img src="" /></span>-->
+		<p class="text-center"><b>圖 1「夢工廠圓夢示意圖」</b></p>
 	</section>
 	
 	<!-- 夢想起飛 -->
 	<section *ngIf="_takeOff">
-		<!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
-		
 		<h2>意涵</h2>
 		<p>本創新教學試辦課程設計過程，採取PDCAB循環的實踐，包括規劃(plan)、實踐(do)、檢視(check)、回饋與改善(action)與標竿學習(benchmarking)等步驟，透過，逐步落實。</p>
 		<p>起夢：起夢共識營3小時，參與創新教學之教師、輔導員與行政助理聚會討論，凝聚教學共識，討論未來進行方式或其他相關問題。</p>
@@ -109,60 +68,50 @@
 		<hr class="major" />
 
 		<h2>課程內容</h2>
-		<p>本創新教學試辦課程設計過程，採取PDCAB循環的實踐，包括規劃(plan)、實踐(do)、檢視(check)、回饋與改善(action)與標竿學習(benchmarking)等步驟，透過，逐步落實。</p>
+		<p>Text here</p>
 		
 		<hr class="major" />
 
 		<h2>活動照片</h2>
-		<p>「頑皮塘101數位文創智造夢工廠」創新教學試辦計畫運用觀念新穎、共同參與、學生主體、多元適性、科技善用、永續創新等原則加以設計。</p>
-		
+		<p>Text here</p>
 	</section>
 	
 	<!-- 解夢分享 -->
 	<section *ngIf="_interpretation">
-		<!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
-		
 		<h2>意涵</h2>
-		<p>解夢：主要是以傳統教學方法，傳授有關桃園埤塘的基本知識，稱為「基礎課程」共21小時，由人社院參與教師與社區實務工作者擔任師資，以觀念傳遞、互動討論與知識分享為主。</p>
-		<p>課程科目初步包括：「桃園埤塘知多少？」、「埤塘─聚落發展的生命之水」、「形形色色的埤塘生物」、「埤塘發『聲』的事」、「桃園文化地圖行旅」、「社會企業家產業學堂」、「數位工具百寶箱」、「電子商務大觀園」、「社區尋寶與智造」等，提供各組「圓夢」行動的知識基礎。</p>
+		<p><b>解夢：</b>主要是以傳統教學方法，傳授有關桃園埤塘的基本知識，稱為「基礎課程」共21小時，由人社院參與教師與社區實務工作者擔任師資，以觀念傳遞、互動討論與知識分享為主。課程科目初步包括：「桃園埤塘知多少？」、「埤塘─聚落發展的生命之水」、「形形色色的埤塘生物」、「埤塘發『聲』的事」、「桃園文化地圖行旅」、「社會企業家產業學堂」、「數位工具百寶箱」、「電子商務大觀園」、「社區尋寶與智造」等，提供各組「圓夢」行動的知識基礎。</p>
 		
 		<hr class="major" />
 
 		<h2>課程內容</h2>
-		<p>本創新教學試辦課程設計過程，採取PDCAB循環的實踐，包括規劃(plan)、實踐(do)、檢視(check)、回饋與改善(action)與標竿學習(benchmarking)等步驟，透過，逐步落實。</p>
+		<p>Text here</p>
 		
 		<hr class="major" />
 
 		<h2>活動照片</h2>
-		<p>「頑皮塘101數位文創智造夢工廠」創新教學試辦計畫運用觀念新穎、共同參與、學生主體、多元適性、科技善用、永續創新等原則加以設計。</p>
-		
-		
+		<p>Text here</p>
 	</section>
 	
 	<!-- 踏夢之旅 -->
 	<section *ngIf="_journey">
-		<!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
-		
 		<h2>意涵</h2>
-		<p>踏夢：實地巡禮埤塘8小時，由教師與輔導員帶領，分組進行桃園埤塘巡禮，包括：中壢士校大池、八德埤塘生態公園、楊梅秀才山5B埤塘公園、龍潭觀光大池新屋、新屋後湖塘等。由各組自行認養要「夢遊」的埤塘與社區，同時選擇從玩文學、玩美學、玩文創、玩影音或玩生態的角度進行「築夢」作品的創作計畫，並於課程結束前完成逐夢作品。</p>
+		<p><b>踏夢：</b>實地巡禮埤塘8小時，由教師與輔導員帶領，分組進行桃園埤塘巡禮，包括：中壢士校大池、八德埤塘生態公園、楊梅秀才山5B埤塘公園、龍潭觀光大池新屋、新屋後湖塘等。由各組自行認養要「夢遊」的埤塘與社區，同時選擇從玩文學、玩美學、玩文創、玩影音或玩生態的角度進行「築夢」作品的創作計畫，並於課程結束前完成逐夢作品。</p>
 		
 		<hr class="major" />
 
 		<h2>課程內容</h2>
-		<p>本創新教學試辦課程設計過程，採取PDCAB循環的實踐，包括規劃(plan)、實踐(do)、檢視(check)、回饋與改善(action)與標竿學習(benchmarking)等步驟，透過，逐步落實。</p>
+		<p>Text here</p>
 		
 		<hr class="major" />
 
 		<h2>活動照片</h2>
-		<p>「頑皮塘101數位文創智造夢工廠」創新教學試辦計畫運用觀念新穎、共同參與、學生主體、多元適性、科技善用、永續創新等原則加以設計。</p>
-		
+		<p>Text here</p>
 	</section>
 	
 	<!-- 築夢逐夢 -->
 	<section *ngIf="_buildAndPursue">
-		<!--<span class="image main"><img src="images/pic11.jpg" alt="" /></span>-->
 		<h2>意涵</h2>
-		<p>築夢：創新教學課程34小時，由人社院參與教師與業師共同擔任築夢師資，以相互合作精神共同操作，採取問題導向教學法，由業師提出問題，學生提出解決構想。課程主題係以埤塘為主題，包括下列課程：</p>
+		<p><b>築夢：</b>創新教學課程34小時，由人社院參與教師與業師共同擔任築夢師資，以相互合作精神共同操作，採取問題導向教學法，由業師提出問題，學生提出解決構想。課程主題係以埤塘為主題，包括下列課程：</p>
 		<p>(一)「玩影音」實作課程：由各組決定要採用的影音數位科技後，自行邀請專業師資授課，例如學習手機攝影、設計LOGO等，計10小時，授課鐘點費由本教學計畫支付。</p>
 		<p>(二)「玩創意」內容發想：由人社院教師與業師共同上課，引導各組學生針對選定文創產品的創意內容提出發想，計6小時。</p>
 		<p>(三)「玩文學」廣告文案：由人社院教師與廣告實務工作者共同引導各組學生針對選定文創產品（例如推銷休閒旅遊景點、旅館、民宿等）的廣告文案進行撰寫練習，計6小時。</p>
@@ -173,10 +122,10 @@
 		<hr class="major" />
 
 		<h2>課程內容</h2>
-		<p>本創新教學試辦課程設計過程，採取PDCAB循環的實踐，包括規劃(plan)、實踐(do)、檢視(check)、回饋與改善(action)與標竿學習(benchmarking)等步驟，透過，逐步落實。</p>
+		<p>Text here</p>
 		
 		<hr class="major" />
 
 		<h2>活動照片</h2>
-		<p>「頑皮塘101數位文創智造夢工廠」創新教學試辦計畫運用觀念新穎、共同參與、學生主體、多元適性、科技善用、永續創新等原則加以設計。</p>
+		<p>Text here</p>
 </section>
