--- a/1000TANG_angular/src/app/widgets/app-header/app-header.widget.html
+++ b/1000TANG_angular/src/app/widgets/app-header/app-header.widget.html
@@ -1,5 +1,5 @@
 <header id="header">
-	<a href="#!" class="logo"><strong>千塘社區研究院</strong></a>
+	<a href="/" class="logo" [routerLink]="['/']"><strong>千塘社區研究院</strong></a>
 	<ul class="icons">
 		<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 		<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
